--- a/src/components/BasePopupWindow/BasePopupWindow.html
+++ b/src/components/BasePopupWindow/BasePopupWindow.html
@@ -7,7 +7,7 @@
 
 
     <!--弹窗主体 begin-->
-    <div class="popup-window-box box1" @touchmove.prevent>
+    <div class="popup-window-box" @touchmove.prevent>
 
       <div class="popWindow-title" :class="{'popWindow-title-no-border':!headerBorder}">
         <slot name="header">
