--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -54,7 +54,7 @@
 }
 
 .line-scale-pulse-out > div {
-  background-color: #C43E4E;
+  background-color: #3576F5;
   width: 3px;
   height: 30px;
   border-radius: 2px;
