--- a/src/components/BusinessApplication/BusinessApplication.css
+++ b/src/components/BusinessApplication/BusinessApplication.css
@@ -1,9 +1,9 @@
 .BusinessApplication{
-	padding: 50px;
-  padding-top: 100px;
+	/*padding: 50px;*/
+  /*padding-top: 100px;*/
 }
 .bussiness_apply_container{
-    width: 620px;
+    width: 520px;
     margin: 0 auto;
     height: 520px;
     position: relative;
@@ -11,7 +11,7 @@
 .bussiness_apply_body{
 	/*width: 55%;*/
 	width: 100%;
-	margin: 0 auto;
+	margin: 50px auto;
 }
 .text_block{
 	color: #333;
@@ -54,30 +54,31 @@
   color: #EF5656;
 }
 .bussiness_apply_title_small2{
-  opacity: 0.7;
+  /*opacity: 0.7;*/
   font-family: PingFangSC-Medium;
-  font-size: 16px;
-  color: #000000;
-  line-height: 60px;
-  margin-left: 60px;
+  font-size: 14px;
+  color: #6B7DA2;
+  /*line-height: 60px;*/
+  /*margin-left: 60px;*/
 }
 .bussiness_small3{
-  opacity: 0.5;
+  /*opacity: 0.5;*/
   font-family: PingFangSC-Regular;
-  font-size: 16px;
-  color: #000000;
+  font-size: 14px;
+  color: #0D0E23;
   letter-spacing: 0;
-  margin-left: 60px;
-  line-height: 30px;
+  /*margin-left: 60px;*/
+  line-height: 80px;
   width: 100%;
-  height: 30px;
+  height: 80px;
+  border-bottom: 1px solid #EFF0FF;
 }
 .bussiness_small3 .bussiness_apply_title_small3_aa{
   float: left;
 }
 .bussiness_small3 .bussiness_apply_title_small3_bb{
   float: right;
-  margin-right: 120px;
+  /*margin-right: 120px;*/
   font-family: PingFangSC-Regular;
   font-size: 16px;
   color: #EF5656;
