删除无用代码

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -250,7 +250,7 @@
         我的订单
 <!--        <router-link to="/index/PersonCenter/PaymentSet">修改支付方式</router-link>-->
       </div>
-<!--      <a class="order_title_right text_blue" href="https://www.btcdo.com/index/notice/noticeDetail?id=100328" target="_blank">商家操作说明</a>-->
+<!--      <a class="order_title_right text_blue" href="" target="_blank">商家操作说明</a>-->
 
     </div>
     <!-- 页签 start -->
@@ -292,7 +292,7 @@
 <!--        <div class="submit-buy-item">-->
 <!--          <div class="submit-buy-item-left text_grey_8 strong">价格设置：</div>-->
 <!--          <div class="submit-buy-item-right text_dark strong">-->
-<!--            <img class="submit-buy-item-right-img" src="../../assets/c2c_common/select_choise.png" alt="">-->
+<!--            <img class="submit-buy-item-right-img" src="" alt="">-->
 <!--            固定价格-->
 <!--          </div>-->
 <!--        </div>-->
@@ -377,7 +377,7 @@
 <!--        <div class="submit-buy-item">-->
 <!--          <div class="submit-buy-item-left text_grey_8 strong">价格设置：</div>-->
 <!--          <div class="submit-buy-item-right text_dark strong">-->
-<!--            <img class="submit-buy-item-right-img" src="../../assets/c2c_common/select_choise.png" alt="">-->
+<!--            <img class="submit-buy-item-right-img" src="" alt="">-->
 <!--            固定价格-->
 <!--          </div>-->
 <!--        </div>-->
