--- a/src/components/BaseCheckBox/BaseCheckBox.css
+++ b/src/components/BaseCheckBox/BaseCheckBox.css
@@ -1,10 +1,11 @@
 .mobile-checkbox {
+  cursor: pointer;
   float: left;
-  height: 14px;
+  height: 16px;
 }
 
 .mobile-checkbox-img {
-  height: 14px;
+  height: 16px;
   display: block;
-  margin-right: 5px;
+  margin-right: 10px;
 }
