--- a/src/components/BasePageTopBar/BasePageTopBar.css
+++ b/src/components/BasePageTopBar/BasePageTopBar.css
@@ -12,7 +12,8 @@
   height:140px;
   background-image:url("./assets/business_banner.png");
   background-repeat:no-repeat;
-  background-size:100% 100%;
+  background-position: top center;
+  background-size:auto 140px;
   display: flex;
   flex-direction: column;
   justify-content: center;
