--- a/src/components/BusinessApplication/BusinessApplication.css
+++ b/src/components/BusinessApplication/BusinessApplication.css
@@ -62,27 +62,51 @@
   /*margin-left: 60px;*/
 }
 .bussiness_small3{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   /*opacity: 0.5;*/
   font-family: PingFangSC-Regular;
   font-size: 14px;
   color: #0D0E23;
   letter-spacing: 0;
   /*margin-left: 60px;*/
-  line-height: 80px;
+  /*line-height: 80px;*/
   width: 100%;
   height: 80px;
   border-bottom: 1px solid #EFF0FF;
 }
 .bussiness_small3 .bussiness_apply_title_small3_aa{
-  float: left;
+  /*float: left;*/
+}
+.bussiness_agree_to_pay{
+  color: #3576F5;
+  cursor: pointer;
 }
 .bussiness_small3 .bussiness_apply_title_small3_bb{
-  float: right;
+  /*float: right;*/
   /*margin-right: 120px;*/
   font-family: PingFangSC-Regular;
-  font-size: 16px;
-  color: #EF5656;
+  font-size: 14px;
+  color: #FFFFFF;
   letter-spacing: 0;
+  padding:10px;
+  background-color: #3576F5;
+  line-height: 20px;
+}
+
+.bussiness_small3 .bussiness_apply_title_small3_bb_certified{
+  color: #08D0AC;
+  letter-spacing: 0;
+  padding:10px;
+  /*padding-right: 0;*/
+  background-color: #ffffff;
+}
+
+.bussiness_small3_agreement{
+  align-items: center;
+  line-height: 20px;
 }
 
 .bussiness_small4{
@@ -155,14 +179,14 @@
 	display: inline-block;
 	width: 15px;
 	height: 15px;
-	background: url('./assets/select_no_choise.png') center center no-repeat;
+	background: url('../../assets/c2c_common/noselect.png') center center no-repeat;
 	background-size: 100%;
 	vertical-align: middle;
 	margin-top: -2px;
 	margin-right: 2px;
 }
 .check_radio.selected {
-	background: url('./assets/select_choise.png') center center no-repeat;
+	background: url('../../assets/c2c_common/select.png') center center no-repeat;
 	background-size: 100%;
 }
 .input_radio{
@@ -171,4 +195,5 @@
 
 .bdiphone{
   cursor: pointer;
+  color: #ffffff;
 }
