--- a/src/components/BusinessOrderConduct/BusinessOrderConduct.html
+++ b/src/components/BusinessOrderConduct/BusinessOrderConduct.html
@@ -4,7 +4,7 @@
 			<!-- table 头 start -->
 			<div class="business_order_table_title flex-center ">
         <div class="type">类型</div>
-        
+
 				<div class="price">单价(CNY)</div>
 				<!-- <div class="amount"></div> -->
         <div class="amount">数量(USDT)</div>
@@ -73,7 +73,7 @@
 <!--          <div class="submit-buy-item">-->
 <!--            <div class="submit-buy-item-left text_grey_8 strong">价格设置：</div>-->
 <!--            <div class="submit-buy-item-right text_dark strong">-->
-<!--              <img class="submit-buy-item-right-img" src="../../assets/c2c_common/select_choise.png" alt="">-->
+<!--              <img class="submit-buy-item-right-img" src="" alt="">-->
 <!--              固定价格-->
 <!--            </div>-->
 <!--          </div>-->
