添加银行卡收款账户 + 修改弹框 + 修改toast弹窗

--- a/src/components/BasePopupWindow/BasePopupWindow.css
+++ b/src/components/BasePopupWindow/BasePopupWindow.css
@@ -94,7 +94,7 @@
   width: 460px;
   font-size: 14px;
   color: #6B7DA2;
-  padding: 25px 25px 15px;
+  padding: 25px 25px 0;
   position: relative;
   /*margin: 0 auto;*/
 
