--- a/src/components/PaymentSet/PaymentSet.html
+++ b/src/components/PaymentSet/PaymentSet.html
@@ -134,8 +134,10 @@
               >
                 <div class="bank-label-title flex">
                   <div class="bank-logo-icon-container flex-center">
-                    <img :src="'https://logo.btcdo.com/'+removeDefaultBankCardList[(row-1)*3+i-1].bankICO+'.png'" alt=""
+                    <img :src="" alt=""
                          class="bank-logo-icon">
+<!--                    <img :src="'https://logo.btcdo.com/'+removeDefaultBankCardList[(row-1)*3+i-1].bankICO+'.png'" alt=""-->
+<!--                         class="bank-logo-icon">-->
                   </div>
                   <div class="bank-label-name-container flex">
                     <div class="bank-label-ch-name">{{removeDefaultBankCardList[(row-1)*3+i-1].bankNameCN}}</div>
