--- a/src/components/PaymentSet/PaymentSe.css
+++ b/src/components/PaymentSet/PaymentSe.css
@@ -5,6 +5,13 @@
   border-radius: 1px;
 }
 
+.paymentSe {
+  border: 1px solid #EFF0FF;
+  width: 100%;
+  min-height: 364px;
+  border-radius: 1px;
+}
+
 /*title begin*/
 .title {
   background: #F5F6FA;
@@ -210,6 +217,7 @@
 }
 
 .bank-content-row {
+  /*position: relative;*/
   /*flex-direction: row;*/
   /*justify-content: space-between;*/
   /*margin-bottom: 36px;*/
@@ -350,16 +358,40 @@
   /*border-bottom: 1px solid #EFF0FF;*/
   box-sizing: border-box;
 }
+
 .add-new-bank-card-label {
   position: absolute;
   right: 23px;
-  /*display: flex;*/
-  /*flex-direction: column;*/
-  align-items: center;
-  /*justify-content: center;*/
+}
 
+.add-new-bank-card-label-no {
+  margin: 96px auto;
+  /*text-align: center;*/
+  /*text-align: center;*/
+  /*justify-content: center;*/
   /*background: white;*/
 }
+
+.no-bank-list {
+  text-align: center;
+
+}
+
+.no-bank-list img {
+  width:86px;
+  margin-bottom: 24px;
+}
+
+.no-bank-list p {
+  color: #6B7DA2;
+  font-size:16px;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+  margin-bottom: 31px;
+}
+
+
+
 
 .add-new-bank-card-img {
   display: block;
@@ -368,11 +400,50 @@
   background: url("./assets/bind_bank_card.png");
   background-repeat: no-repeat;
   background-size: contain;
+  margin: auto 0;
   margin-right: 10px;
   /* width: 77px;
   height: 77px; */
   /*line-height: 80px;*/
   /*margin-bottom: 10px;*/
+}
+
+/*.add-new-bank-card-img-no-list {*/
+/*  display: block;*/
+/*  width: 14px;*/
+/*  height: 14px;*/
+/*  background: url("");*/
+/*  background-repeat: no-repeat;*/
+/*  background-size: contain;*/
+/*  margin-right: 10px;*/
+/*  vertical-align: middle;*/
+/*  !* width: 77px;*/
+/*  height: 77px; *!*/
+/*  !*line-height: 80px;*!*/
+/*  !*margin-bottom: 10px;*!*/
+/*}*/
+
+.add-bank-card-no {
+  justify-content: center;
+  width: 124px;
+  height: 34px;
+  line-height: 34px;
+  border: 1px solid #E7EBEE;
+  margin: 0 auto;
+}
+
+.add-bank-card-no img {
+  width: 13px;
+  height: 13px;
+  margin: auto 0;
+  margin-right: 4px;
+}
+
+.add-new-bank-card-no-list {
+  color: #3576F5;
+  font-size:14px;
+  font-family:PingFangSC-Semibold,PingFang SC;
+  font-weight:600;
 }
 
 .add-new-bank-card {
@@ -414,6 +485,7 @@
   font-size: 14px;
   color: #6B7DA2;
   margin-bottom: 10px;
+  height: 20px;
   /*padding-right: 20px;*/
   white-space: nowrap;
 }
@@ -442,9 +514,11 @@
   /*color: #3576F5;*/
   box-sizing: border-box;
 }
+
 .input-item-input-container >>> .vs__actions {
   height: 40px;
 }
+
 .input-item-input-container >>> .dropdown-toggle {
   border-radius: 1px;
   padding-left: 15px;
@@ -724,7 +798,8 @@
   flex-direction: column;
 }
 
-.input-item-container-default-bank-card .input-item-input-container {
+.input-item-container-default-bank-card {
+  height: 20px;
   align-items: center;
   /*justify-content: center;*/
 }
@@ -1029,8 +1104,8 @@
     width: 50px;
   }
   .verify-article {
-     width: auto;
-     padding: 0px;
+    width: auto;
+    padding: 0px;
   }
   .auth-state-header {
     width: auto;
