--- a/src/components/PaymentSet/PaymentSe.html
+++ b/src/components/PaymentSet/PaymentSe.html
@@ -1,9 +1,9 @@
-<div class="paymentSet">
+<div :class="removeDefaultBankCardList.length == 0 ? 'paymentSe':'paymentSet'">
   <Loading v-if="loading"/>
   <template v-else>
     <!--收款账户 title begin-->
     <div class="title flex">
-<!--      <span class="title-block"></span>-->
+      <!--      <span class="title-block"></span>-->
       <span>收款账户</span>
       <span class="title-describe">请务必使用您本人的实名账户</span>
     </div>
@@ -61,14 +61,14 @@
 
     <!--银行转账 begin-->
     <div class="bank-container">
-<!--      &lt;!&ndash;银行转账 标题 begin&ndash;&gt;-->
-<!--      <div class="bank-container-title-container payment-title-container flex">-->
-<!--        <div class="payment-title ">银行转账</div>-->
-<!--        &lt;!&ndash;<template v-if="bankList.length>0">&ndash;&gt;-->
-<!--          &lt;!&ndash;<Toggle class="toggle-container" :switchFunc="switchBankPayToggle" :toggleOpen="bankPayToggle"/>&ndash;&gt;-->
-<!--        &lt;!&ndash;</template>&ndash;&gt;-->
-<!--      </div>-->
-<!--      &lt;!&ndash;银行转账 标题 end&ndash;&gt;-->
+      <!--      &lt;!&ndash;银行转账 标题 begin&ndash;&gt;-->
+      <!--      <div class="bank-container-title-container payment-title-container flex">-->
+      <!--        <div class="payment-title ">银行转账</div>-->
+      <!--        &lt;!&ndash;<template v-if="bankList.length>0">&ndash;&gt;-->
+      <!--          &lt;!&ndash;<Toggle class="toggle-container" :switchFunc="switchBankPayToggle" :toggleOpen="bankPayToggle"/>&ndash;&gt;-->
+      <!--        &lt;!&ndash;</template>&ndash;&gt;-->
+      <!--      </div>-->
+      <!--      &lt;!&ndash;银行转账 标题 end&ndash;&gt;-->
 
       <!--银行转账 内容 begin-->
       <ul class="bank-content-container">
@@ -79,8 +79,8 @@
             <!--银行卡 begin-->
             <div class="bank-item-container" v-if="removeDefaultBankCardList[(row-1)*3+i-1]">
               <div class="bank-label">
-<!--                bank-label-blue-->
-<!--                :class="{'bank-label-blue':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==1,'bank-label-green':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==2,'bank-label-yellow':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==3}"-->
+                <!--                bank-label-blue-->
+                <!--                :class="{'bank-label-blue':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==1,'bank-label-green':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==2,'bank-label-yellow':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==3}"-->
                 <div class="bank-label-title flex">
                   <!--银行logo-->
                   <div class="bank-logo-icon-container">
@@ -157,7 +157,7 @@
                 </div>
                 <div class="bank-label-name-container flex">
                   <div class="bank-label-ch-name">{{defaultBank.bankNameCN}}</div>
-<!--                  <div class="bank-label-en-name">{{defaultBank.bankNameEN}}</div>-->
+                  <!--                  <div class="bank-label-en-name">{{defaultBank.bankNameEN}}</div>-->
                 </div>
               </div>
               <div class="bank-label-card-number strong">
@@ -180,13 +180,23 @@
           <!--默认银行卡 end-->
 
           <!--添加银行卡 begin-->
-            <div class="add-new-bank-card-item flex">
-
-
-            <div class="add-new-bank-card-label flex  pointer"
-                 @click="clickAddBankPay">
+          <div class="add-new-bank-card-item flex" v-if="removeDefaultBankCardList.length !=0">
+            <div class="add-new-bank-card-label flex pointer" @click="clickAddBankPay">
               <div class="add-new-bank-card-img"></div>
               <div class="add-new-bank-card">请添加银行卡</div>
+            </div>
+          </div>
+          <!--添加银行卡 end-->
+
+          <!--添加银行卡 begin-->
+          <div class="add-new-bank-card-label-no" v-if="removeDefaultBankCardList.length == 0">
+            <div class="no-bank-list">
+              <img src="./assets/no_bank_list.png" alt="">
+              <p>暂无收款银行卡</p>
+            </div>
+            <div class="flex add-bank-card-no pointer" @click="clickAddBankPay">
+              <img src="./assets/add_bind_bank_card.png" alt="">
+              <div class="add-new-bank-card-no-list">添加</div>
             </div>
           </div>
           <!--添加银行卡 end-->
@@ -285,7 +295,7 @@
 
           <!--收款码错误提示 begin-->
           <div class="input-item-container wrong-msg-container flex" v-if="aLiPayCodeImgWrong">
-<!--            <div class="input-item-title"></div>-->
+            <!--            <div class="input-item-title"></div>-->
             <div class="input-item-input-container ">
               {{aLiPayCodeImgWrong}}
             </div>
@@ -293,29 +303,29 @@
           <!--收款码错误提示 end-->
 
           <!--备注信息 begin-->
-<!--          <div class="input-item-container input-item-container-remarks flex">-->
-<!--            <div class="input-item-title">备注信息：</div>-->
-<!--            <div class="input-item-input-container relative">-->
-<!--          <textarea class="input-item-remarks input_border border_radius input_padding input-item-input"-->
-<!--                    :class="{'wrong-msg-border':aLiPayPromptWrong}"-->
-<!--                    placeholder="请输入备注信息"-->
-<!--                    v-model="aLiPayPrompt"-->
-<!--                    @blur="testALiPayPrompt"-->
-<!--                    maxlength="50"-->
-<!--          >-->
-<!--          </textarea>-->
-<!--              <div class="input-item-remarks-number">{{aLiPayPromptLength}}/50</div>-->
-<!--            </div>-->
-<!--          </div>-->
+          <!--          <div class="input-item-container input-item-container-remarks flex">-->
+          <!--            <div class="input-item-title">备注信息：</div>-->
+          <!--            <div class="input-item-input-container relative">-->
+          <!--          <textarea class="input-item-remarks input_border border_radius input_padding input-item-input"-->
+          <!--                    :class="{'wrong-msg-border':aLiPayPromptWrong}"-->
+          <!--                    placeholder="请输入备注信息"-->
+          <!--                    v-model="aLiPayPrompt"-->
+          <!--                    @blur="testALiPayPrompt"-->
+          <!--                    maxlength="50"-->
+          <!--          >-->
+          <!--          </textarea>-->
+          <!--              <div class="input-item-remarks-number">{{aLiPayPromptLength}}/50</div>-->
+          <!--            </div>-->
+          <!--          </div>-->
           <!--备注信息 end-->
 
           <!--备注信息错误提示 begin-->
-<!--          <div class="input-item-container wrong-msg-container flex" v-if="aLiPayPromptWrong">-->
-<!--            <div class="input-item-title"></div>-->
-<!--            <div class="input-item-input-container ">-->
-<!--              {{aLiPayPromptWrong}}-->
-<!--            </div>-->
-<!--          </div>-->
+          <!--          <div class="input-item-container wrong-msg-container flex" v-if="aLiPayPromptWrong">-->
+          <!--            <div class="input-item-title"></div>-->
+          <!--            <div class="input-item-input-container ">-->
+          <!--              {{aLiPayPromptWrong}}-->
+          <!--            </div>-->
+          <!--          </div>-->
           <!--备注信息错误提示 end-->
 
         </div>
@@ -324,7 +334,7 @@
           <button class="btn_white_blue text_blue aLiPay-btn pointer" @click="closeBindALiPayPopupWindow">取消</button>
           <button class="btn_blue text_white aLiPay-btn aLiPay-commit-btn pointer"
                   @click="goToALiPayStep2">
-                  提交
+            提交
           </button>
         </div>
       </template>
@@ -431,7 +441,7 @@
 
             <!--账户名错误提示 begin-->
             <div class="input-item-container-wrong wrong-msg-container flex" v-if="bankAccountWrong">
-              <div class="input-item-input-container ">
+              <div class="input-item-input-container">
                 {{bankAccountWrong}}
               </div>
             </div>
@@ -456,7 +466,7 @@
 
             <!--开户行错误提示 begin-->
             <div class="input-item-container-wrong wrong-msg-container flex" v-if="bankNameWrong">
-              <div class="input-item-title"></div>
+              <!--              <div class="input-item-title"></div>-->
               <div class="input-item-input-container ">
                 {{bankNameWrong}}
               </div>
@@ -478,7 +488,7 @@
             </div>
             <!--开户支行错误提示 begin-->
             <div class="input-item-container-wrong wrong-msg-container flex" v-if="bankBranchNameWrong">
-              <div class="input-item-title"></div>
+              <!--              <div class="input-item-title"></div>-->
               <div class="input-item-input-container ">
                 {{bankBranchNameWrong}}
               </div>
@@ -509,9 +519,9 @@
           <!--银行卡号 end-->
 
           <!--默认收款银行卡 begin-->
-          <div class="input-item-container input-item-container-default-bank-card flex">
-<!--            <div class="input-item-title"></div>-->
-            <div class="input-item-input-container flex ">
+          <div class=" input-item-container-default-bank-card flex">
+            <!--            <div class="input-item-title"></div>-->
+            <div class="flex">
               <!--<input type="text" placeholder="请输入银行卡号" class="input-item-input input_padding input_border border_radius">-->
               <span @click="addChoseDefaultBank" class="pointer text_blue input-item-default-bank-card-radio-container">
                 <Radio :select="bankDefault" class="input-item-default-bank-card-radio"/>
@@ -523,7 +533,7 @@
 
           <!--默认收款银行卡错误提示 begin-->
           <div class="input-item-container wrong-msg-container flex" v-if="bankDefaultWrong">
-<!--            <div class="input-item-title"></div>-->
+            <!--            <div class="input-item-title"></div>-->
             <div class="input-item-input-container ">
               {{bankDefaultWrong}}
             </div>
@@ -532,20 +542,20 @@
 
 
           <!--备注信息 begin-->
-<!--          <div class="input-item-container input-item-container-remarks flex">-->
-<!--            <div class="input-item-title">备注信息：</div>-->
-<!--            <div class="input-item-input-container relative">-->
-<!--          <textarea class="input-item-remarks input_border border_radius input_padding input-item-input"-->
-<!--                    placeholder="请输入备注信息"-->
-<!--                    v-model="bankMark"-->
-<!--                    :class="{'wrong-msg-border':bankMarkWrong}"-->
-<!--                    maxlength="50"-->
-<!--                    @blur="testBankMark"-->
-<!--          >-->
-<!--          </textarea>-->
-<!--              <div class="input-item-remarks-number">{{bankPromptLength}}/50</div>-->
-<!--            </div>-->
-<!--          </div>-->
+          <!--          <div class="input-item-container input-item-container-remarks flex">-->
+          <!--            <div class="input-item-title">备注信息：</div>-->
+          <!--            <div class="input-item-input-container relative">-->
+          <!--          <textarea class="input-item-remarks input_border border_radius input_padding input-item-input"-->
+          <!--                    placeholder="请输入备注信息"-->
+          <!--                    v-model="bankMark"-->
+          <!--                    :class="{'wrong-msg-border':bankMarkWrong}"-->
+          <!--                    maxlength="50"-->
+          <!--                    @blur="testBankMark"-->
+          <!--          >-->
+          <!--          </textarea>-->
+          <!--              <div class="input-item-remarks-number">{{bankPromptLength}}/50</div>-->
+          <!--            </div>-->
+          <!--          </div>-->
           <!--备注信息 end-->
 
           <!--备注信息错误提示 begin-->
@@ -625,23 +635,23 @@
 
           <!--默认收款银行卡 begin-->
           <div class="input-item-container-two flex">
-<!--            <div class="input-item-conform-title"></div>-->
-              <div>已设为默认银行卡</div>
-              <div class="img-item-input-confirm-container">
-                <img src="./assets/bind-bank.png" alt="">
-              </div>
-              <!--<input type="text" placeholder="请输入银行卡号" class="input-item-input input_padding input_border border_radius">-->
+            <!--            <div class="input-item-conform-title"></div>-->
+            <div>已设为默认银行卡</div>
+            <div class="img-item-input-confirm-container">
+              <img src="./assets/bind-bank.png" alt="">
+            </div>
+            <!--<input type="text" placeholder="请输入银行卡号" class="input-item-input input_padding input_border border_radius">-->
           </div>
           <!--默认收款银行卡 end-->
 
-<!--          &lt;!&ndash;备注信息 begin&ndash;&gt;-->
-<!--          <div class="input-item-container input-item-container-confirm-remarks flex">-->
-<!--            <div class="input-item-conform-title">备注信息：</div>-->
-<!--            <div class="input-item-input-confirm-container relative">-->
-<!--              {{bankMark}}-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          &lt;!&ndash;备注信息 end&ndash;&gt;-->
+          <!--          &lt;!&ndash;备注信息 begin&ndash;&gt;-->
+          <!--          <div class="input-item-container input-item-container-confirm-remarks flex">-->
+          <!--            <div class="input-item-conform-title">备注信息：</div>-->
+          <!--            <div class="input-item-input-confirm-container relative">-->
+          <!--              {{bankMark}}-->
+          <!--            </div>-->
+          <!--          </div>-->
+          <!--          &lt;!&ndash;备注信息 end&ndash;&gt;-->
 
         </div>
 
@@ -760,7 +770,7 @@
     <PopupWindow :open="secondVerifyOpen" :close="closeSecondVerify">
       <template v-if="verifyStep==1">
 
-<!--        <div class="ga_sms_body_close cursor" @click="CLOSE_GA_SMS_DIALOG">×</div>-->
+        <!--        <div class="ga_sms_body_close cursor" @click="CLOSE_GA_SMS_DIALOG">×</div>-->
 
         <div slot="header" class="popwindow-header flex">
           <div>安全验证</div>
@@ -808,9 +818,9 @@
                  :class="{'wrong-msg':verificationCodeWA!==''}"
             >
 
-<!--              <span class="flex-center unit-input-container-title">-->
-<!--                <img src="./assets/手机.png" alt="">-->
-<!--              </span>-->
+              <!--              <span class="flex-center unit-input-container-title">-->
+              <!--                <img src="./assets/手机.png" alt="">-->
+              <!--              </span>-->
               <input type="text" placeholder='请输入验证码'
                      class="unit-input" v-model="verificationCode"
                      @blur="testVerificationCode">
