--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -416,6 +416,11 @@ input {
   /*background-color: rgba(196,62,78,0.8) !important;*/
 }
 
+.btn_blue_disabled {
+  cursor: none;
+  background-color: #A8C6FF;
+}
+
 .btn_blue_box_shadow {
   /*box-shadow: 3px 3px 6px #8ddef2;*/
   box-shadow: 0 2px 10px 2px rgba(0, 127, 159, 0.2);
