增加商家协议同意点击事件

--- a/src/components/BusinessApplication/BusinessApplication.html
+++ b/src/components/BusinessApplication/BusinessApplication.html
@@ -76,7 +76,7 @@
           <!--<img v-show="agreement" src="../../assets/c2c_common/select.png" class="select-img"/>-->
         <!--</span>-->
           <BaseCheckBox :agreement="agree" :changeAgreement='changeAgreement'/>
-          <div class="bussiness_agree_to_pay">同意缴纳商家保证金{{key_amount.value}}{{key_amount.name}}</div>，且同意
+          <div class="bussiness_agree_to_pay" @click="changeAgreement">同意缴纳商家保证金{{key_amount.value}}{{key_amount.name}}</div>，且同意
           <router-link to="/index/MerchantsProtocol" class="text_yellow">《商家认证协议》</router-link>
           <!-- <span class="text_yellow">《商家认证协议》。</span> -->
         </div>
